# rtoy-samples

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml
.cargo/: config
assets/meshes/: lighthouse.obj.source  lighthouse.obj.xz  teapot.obj.xz
assets/meshes/dredd/: scene.gltf  source.txt
assets/meshes/helmetconcept/: scene.gltf
assets/meshes/ori/: scene.gltf
assets/meshes/the_lighthouse/: scene.gltf
assets/meshes/wild_west_motorcycle/: scene.gltf  source.txt
assets/shaders/: adaptive_sharpen.glsl  avg.glsl  blend.glsl  blur.glsl  buffer_test.glsl  extract_gbuffer_depth.glsl  extract_gbuffer_normal.glsl  extract_gbuffer_normal_rgba8.glsl  extract_gbuffer_view_normal_rgba8.glsl  extract_log_luminance.glsl  gradients.glsl  gradients.hlsl  lambert_convolve_octamap.glsl  local_tonemap_sharpen.glsl  luminance-a-trous.glsl  multiply.glsl  raster_gbuffer_ps.glsl  raster_reservoir_oit_ps.glsl  raster_simple_ps.glsl  raster_simple_vs.glsl  raster_stochastic_transparency_ps.glsl  raytrace.glsl  reproject.glsl  reproject_lighting.glsl  rt_hybrid_reflections.glsl  rt_hybrid_shadows.glsl  rt_stochastic_light_sampling.glsl  rt_stochastic_lighting.glsl  sky_octamap.glsl  splat_r_to_rgb.glsl  ssao.glsl  ssao_spatial_filter.glsl  ssao_temporal_filter.glsl  steerable_bilateral.glsl  stochastic_light_filter.glsl  stochastic_light_variance_estimate.glsl  stochastic_transparency_common.glsl  stochastic_transparency_finish.glsl  stochastic_transparency_init.glsl  taa.glsl  (+2 more)
assets/shaders/area-lighting/: brdf.inc  filter_light.glsl  filter_surface.glsl  fuse_lighting.glsl  math.inc  normalize.glsl  primary_vis.glsl  sample_lights.glsl  sample_surfaces.glsl  status.glsl  temporal_accum.glsl  world.inc
assets/shaders/hybrid-adaptive-shadows/: alloc_rt_pixel_locations.glsl  discontinuity_detect.glsl  discontinuity_tile_reduce.glsl  halfres_shadows.glsl  merge_shadows.glsl  prefix_scan_2d_horizontal.glsl  prefix_scan_2d_merge.glsl  prefix_scan_2d_vertical.glsl  sparse_shadows_trace.glsl
assets/shaders/hybrid-render/: merge.glsl
assets/shaders/inc/: atmosphere.inc  brdf.inc  color.hlsl  color.inc  math.inc  mesh_vertex.inc  pack_unpack.inc  rt.inc  uv.inc
assets/shaders/ssgi/: debug.glsl  merge.glsl  reproject_lighting.glsl  sky.glsl  spatial_filter.glsl  ssgi.glsl  temporal_filter.glsl  upsample.glsl
shaders/: blend.glsl  gradients.glsl
src/: lib.rs  rt_shadows.rs  ssao.rs  taa.rs
