[package]
name = "rtoy-samples"
version = "0.1.0"
authors = ["Tomasz Stachowiak <h3@h3.gd>"]
edition = "2018"

description = "Rendering playground"
readme = "README.md"
license = "MIT"
repository = "https://github.com/h3r2tic/rtoy-samples"

[dependencies]
rendertoy = { git = "https://github.com/h3r2tic/rendertoy" }
rtoy-rt = { git = "https://github.com/h3r2tic/rtoy-rt" }
snoozy = { git = "https://github.com/h3r2tic/snoozy" }
snoozy-macros = { git = "https://github.com/h3r2tic/snoozy-macros" }
rand = { version = "0.7", features = ["small_rng"] }
rand_distr = "0.2"
aliasmethod = { git = "https://github.com/h3r2tic/rust_aliasmethod" }
tokio = "0.2.0-alpha.6"
futures-preview = { version = "=0.3.0-alpha.19", features = ["compat"] }

[patch."https://github.com/h3r2tic/rtoy-rt"]
rtoy-rt = { path = "../rtoy-rt" }
# 
[patch."https://github.com/h3r2tic/rendertoy"]
rendertoy = { path = "../rendertoy" }
# 
[patch."https://github.com/h3r2tic/snoozy"]
snoozy = { path = "../snoozy" }
# 
[patch."https://github.com/h3r2tic/snoozy-macros"]
snoozy-macros = { path = "../snoozy-macros" }

#[patch.crates-io]
#shader-prepper = { path = "../shader-prepper" }

[profile.dev]
lto = false
incremental = true

[profile.release]
opt-level = 2
lto = false
incremental = true
